feat: Add new forms to front end. Update CSS.
Add form section for airline and passenger. Set right type attributes 
for input html tags.

--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -16,6 +16,21 @@ body {
     margin-top: 20px;
 }
 
+.action {
+  margin-top: 20px;
+}
+
+.flexbox {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.user-menu {
+  border: 2px solid #eee;
+  margin-top: 10px;
+  padding: 5px;
+}
+
 h5 {
     color: #999999;
 }
