--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -18,6 +18,12 @@ body {
 
 .action {
   margin-top: 20px;
+  width: 100%;
+}
+
+.border-bottom {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
 }
 
 .flexbox {
@@ -29,6 +35,7 @@ body {
   border: 2px solid #eee;
   margin-top: 10px;
   padding: 5px;
+  width: 100%;
 }
 
 h5 {
@@ -51,7 +58,13 @@ section {
 label.form {
     font-size: 14px;
     margin-right: 20px;
+    width: 100%;
 }
 input {
     margin-right: 30px;
+    width: 100%;
+}
+
+btn {
+  width: 100%;
 }
